--- a/html/tela_gerar_bilhete.html
+++ b/html/tela_gerar_bilhete.html
@@ -19,7 +19,7 @@
 				<div class="sla" style="padding-top: 18%;">
 					<div class="sla1"></div>
 					<div class="sla1">
-					<form action="/formulario1" method="post">
+					<form action="/form_gerar" method="post">
 						<input style="background-color: black; color: black; margin-bottom: 30px; display: none;" id="data_bilhete" name="data_bilhete" readonly="">
 						<input style="background-color: black; margin-bottom: 30px; display: none;" id="inp_cod" name="cod_bilhete" readonly="">
 						<input id="btn_gerar_codigo" class="" type="submit" name="gerar_codigo" value="Gerar Código de Bilhete" onclick="Gerar_Bilhete();">
