--- a/html/tela_inicial.html
+++ b/html/tela_inicial.html
@@ -14,13 +14,13 @@
 			<div id="table">
 				<ul class="princul">
 					<li class="princ">
-						<a class="neon" href="tela_termo.html">GERAR BILHETE</a>
+						<a class="neon" href="/termo">GERAR BILHETE</a>
 					</li>
 					<li class="princ">
 						<a class="neon" href=" javascript: window.location.href = '/dig_cod/uso';">USAR BILHETE</a>
 					</li>
 					<li class="princ">
-						<a class="neon" href="tela_recarga.html">RECARREGAR BILHETE</a>
+						<a class="neon" href=" javascript: window.location.href = '/dig_cod/recarga';">RECARREGAR BILHETE</a>
 					</li>
 					<li class="princ">
 						<a class="neon" href=" javascript: window.location.href = '/dig_cod/relatorio';">RELATORIO DE GERENCIAMENTO</a>
